Initial commit: Added Java project of taskcruds files

--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -1,12 +1,29 @@
-spring.application.name=TaskCrud
-
-server.port=9001
+server.port=9002
+server.error.include-message=always
+server.error.include-binding-errors=always
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/taskcrud
 spring.datasource.username=postgres
 spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
+
+spring.main.web-application-type=reactive
+spring.cloud.compatibility-verifier.enabled=false
+
+# Eureka configuration
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.preferIpAddress=true
+
+# Spring configuration
+
+spring.application.name=taskcrud
+
+# Server configuration
+server.servlet.context-path=/taskcrudconfig
+
+
+
